# HC-Window

./: .gitignore  CMakeLists.txt  README.md  premake5.lua
examples/: CMakeLists.txt  simple_window.cpp
include/Window/: Core.h  Window.h  WindowFactory.h
src/: WindowFactory.cpp
src/GLFW/: GLFWWindow.cpp  GLFWWindow.h
src/SDL/: SDLWindow.cpp  SDLWindow.h
